# led-timer

./: .gitignore  .gitmodules  README.md
Documents/: dst.txt  pic-power.txt
Hardware/: LEDTimer-Bottom.factory  LEDTimer-Buttons.factory  LEDTimer-Case-v1.FCStd  LEDTimer-Top001.factory
Hardware/LEDTimer/: 2022-12-12_20-31-50.lib  BU2032-1-HD-G.stp  LEDTimer.kicad_pcb  LEDTimer.kicad_pro  LEDTimer.kicad_sch  SC-74-6.stp  fp-lib-table  sym-lib-table
Hardware/LEDTimer/Batt_Renata_HU2032-LF/: eec.dcm  eec.lib
Hardware/LEDTimer/Batt_Renata_HU2032-LF/eec.pretty/: Renata-HU2032-LF-0-0-0.kicad_mod
Hardware/LEDTimer/LEDTimer.pretty/: Display_128x64_096_I2C.kicad_mod  EVQ9P701P.kicad_mod
Hardware/LEDTimer/bom/: ibom.html
Hardware/LEDTimer/footprints.pretty/: 1825232-1.kicad_mod
Hardware/LEDTimerLite/: 2022-12-12_20-31-50.lib  LEDTimer.kicad_sym  LEDTimerLite.kicad_pcb  LEDTimerLite.kicad_pro  LEDTimerLite.kicad_sch  ST-4EA.STEP  sqm32s.stp
Hardware/LEDTimerLite/Batt_Renata_HU2032-LF/eec.models/: Renata_-_HU2032-LF.step
Hardware/LEDTimerLite/LEDTimerLite.pretty/: EVQ9P701P.kicad_mod
Hardware/LEDTimerLite/bom/: ibom.html
Images/: icon-adjust.xcf  icon-exit.xcf  icon-header-end.xcf  icon-item-indicator.xcf  icon-next.xcf  icon-position-empty.xcf  icon-select.xcf  icon-separator.xcf  icon-set.xcf  icon-sunrise-sunset.xcf  led-toggle-indicator.xcf
Research/LedTimerSchedulerPlayground/: CMakeLists.txt  main.cpp
Software/LEDTimer.X/: .gitignore  CMakeLists.txt  Clock.c  Clock.h  Config.h  Graphics.c  Graphics.h  Keypad.c  Keypad.h  LEDTimer.mc3  MainScreen.c  MainScreen.h  OutputController.c  OutputController.h  SSD1306.c  SSD1306.h  SchedulingScreen.c  SchedulingScreen.h  Settings.c  Settings.h  SettingsScreen.c  SettingsScreen.h  SettingsScreen_DST.c  SettingsScreen_DST.h  SettingsScreen_Date.c  SettingsScreen_Date.h  SettingsScreen_DisplayBrightness.c  SettingsScreen_DisplayBrightness.h  SettingsScreen_LEDBrightness.c  SettingsScreen_LEDBrightness.h  SettingsScreen_Location.c  SettingsScreen_Location.h  SettingsScreen_Scheduler.c  SettingsScreen_Scheduler.h  SettingsScreen_SegmentScheduler.c  SettingsScreen_SegmentScheduler.h  SettingsScreen_Time.c  SettingsScreen_Time.h  SettingsScreen_TimeZone.c  SettingsScreen_TimeZone.h  (+16 more)
Software/LEDTimer.X/mcc_generated_files/: adc.c  adc.h  device_config.c  device_config.h  epwm2.c  epwm2.h  eusart.c  eusart.h  fvr.c  fvr.h  i2c1_master.c  i2c1_master.h  i2c_master.c  i2c_master.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  memory.c  memory.h  pin_manager.c  pin_manager.h  pwm5.c  pwm5.h  tmr1.c  tmr1.h  tmr2.c  tmr2.h  tmr4.c  tmr4.h
Software/LEDTimer.X/mcc_generated_files/examples/: i2c1_master_example.c  i2c1_master_example.h  i2c_master_example.c  i2c_master_example.h
Software/LEDTimer.X/nbproject/: configurations.xml  project.xml
Software/LEDTimer.X/tests/: .gitignore  CMakeLists.txt
Software/LEDTimer.X/tests/dst/: CMakeLists.txt  main.cpp
Software/LEDTimerLite.X/: .gitignore  Clock.c  Clock.h  Config.h  OutputController.c  OutputController.h  ProgrammingInterface.c  ProgrammingInterface.h  Settings.c  Settings.h  SunsetSunrise.c  SunsetSunrise.h  System.c  System.h  Types.c  Types.h  UserInterface.c  UserInterface.h  Utils.c  main.c
Software/LEDTimerLite.X/nbproject/: configurations.xml  project.xml
Software/SunriseSunsetLUTGenerator/: SunriseSunsetLUTGenerator.py
